--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #af50b0; }
+  background: #d9c16c; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #a0b548; }
+  background: #aaeec0; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #848d07; }
+  background: #7e3906; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #5f5122; }
+  background: #452ce7; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #b76484; }
+  background: #15f034; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #312a65; }
+  background: #9f0e60; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #c20f22; }
+  background: #5e040f; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #dc9b43; }
+  background: #1bcca8; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #b39d53; }
+  background: #e21fcf; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #5ec493; }
+  background: #a5c4a4; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #9f9d34; }
+  background: #17c3aa; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #fc96da; }
+  background: #c93c41; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #8572a1; }
+  background: #15a6cd; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #5aec0f; }
+  background: #1479e1; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #a25b77; }
+  background: #bac884; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #53ab81; }
+  background: #203bd9; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #c3e9ba; }
+  background: #fe0f82; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #0a94cd; }
+  background: #b95abb; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #3217f5; }
+  background: #860da7; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #cb6940; }
+  background: #56b8ed; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #af81d9; }
+  background: #cf4ed7; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #e9c023; }
+  background: #b96ac2; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #f89d82; }
+  background: #58d675; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #6a313a; }
+  background: #69936b; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #6dcda2; }
+  background: #6735ce; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #975ef9; }
+  background: #d5f1b1; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #27986b; }
+  background: #bc2b55; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #d87a2d; }
+  background: #3ccd4e; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #119556; }
+  background: #1210e0; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #29212b; }
+  background: #441d36; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #a9b810; }
+  background: #6166b1; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #2b6425; }
+  background: #d1f013; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #fcc4fe; }
+  background: #0c9eb0; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #6557a4; }
+  background: #addf75; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #eb0b2c; }
+  background: #f0e7b3; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #5c4afb; }
+  background: #033a29; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #8b9a3c; }
+  background: #66cf67; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #c1ae9b; }
+  background: #2772cf; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #621039; }
+  background: #e4c002; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #c8edf1; }
+  background: #2c15c1; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #9b7bf3; }
+  background: #08c02d; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #fa82c3; }
+  background: #8ff6c8; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #1e6b86; }
+  background: #778c2e; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #c34ac3; }
+  background: #a150c4; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #f5986a; }
+  background: #b332a3; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #e0ed16; }
+  background: #639f8d; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #64535d; }
+  background: #6a7418; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #573028; }
+  background: #fe473a; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #f8184c; }
+  background: #8179c2; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #1665f6; }
+  background: #706842; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #962e03; }
+  background: #d8b5ae; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #7de371; }
+  background: #30b444; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #42161f; }
+  background: #7b7bf6; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #3a2a31; }
+  background: #13549e; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #7169bb; }
+  background: #8f156a; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #120a0d; }
+  background: #878ee3; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #8ffa54; }
+  background: #89252d; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #7e92c5; }
+  background: #bb05ae; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #fa6ce7; }
+  background: #55689f; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #ca8047; }
+  background: #b6fdf2; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #22b327; }
+  background: #0b82bc; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #671a61; }
+  background: #abaf24; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #16e167; }
+  background: #063ae8; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #4b8515; }
+  background: #0ecca7; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #710f3d; }
+  background: #b68b48; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #3001bf; }
+  background: #56eab8; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #5a456b; }
+  background: #4b5444; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #e9a997; }
+  background: #8cbd45; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #a7581b; }
+  background: #e23be9; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #cea012; }
+  background: #1748e8; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #627ce7; }
+  background: #6a0d77; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #f5a8c2; }
+  background: #398fcf; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #f64835; }
+  background: #10d7c9; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #69c0ff; }
+  background: #a57951; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #7e96df; }
+  background: #6daf28; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #b16afe; }
+  background: #f3c29a; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #245ad8; }
+  background: #3046bb; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #375480; }
+  background: #79845a; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #e2e22b; }
+  background: #41a4d7; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #56cf70; }
+  background: #726109; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #016ddc; }
+  background: #d4498f; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #a58df9; }
+  background: #5e4bed; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #c5fd09; }
+  background: #f1b808; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #385d26; }
+  background: #aebc5a; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #9ca0d8; }
+  background: #28cf7c; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #cfc5d6; }
+  background: #f46061; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #96cc41; }
+  background: #32f962; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #0ce98e; }
+  background: #178bfb; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #67c8a7; }
+  background: #7f4149; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #cb7516; }
+  background: #f9597c; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #6b86b2; }
+  background: #758b9c; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #1b0fce; }
+  background: #df9914; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #8ab762; }
+  background: #ffe3a3; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #ee1e2d; }
+  background: #98bfbc; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #62119b; }
+  background: #6dcf47; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #c7fb78; }
+  background: #fe6486; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #de70d7; }
+  background: #569681; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #82dc41; }
+  background: #a23ca7; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #0a99a9; }
+  background: #75c526; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #238c5f; }
+  background: #32da3c; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11011,13 +11011,14 @@ table .bold-heading {
     line-height: 0px;
     position: relative; }
 .standard-table .data-row-heading {
-  color: black;
-  font-size: 20px;
+  color: #4C4C4C;
+  font-size: 16px;
   padding: 10px;
   margin-left: 52px;
   padding-top: 10px;
   padding-bottom: 3px;
-  line-height: 20px; }
+  line-height: 20px;
+  font-weight: 600; }
 .standard-table .table-hover-content-parent {
   cursor: pointer; }
   .standard-table .table-hover-content-parent .show-table-div-on-hover {
@@ -11032,8 +11033,9 @@ table .bold-heading {
       grid-gap: 10px;
       padding: 5px 20px;
       align-items: center;
-      color: #000;
-      text-decoration: none; }
+      color: #4C4C4C;
+      text-decoration: none;
+      font-size: 14px; }
       .standard-table .table-hover-content-parent .show-table-div-on-hover .table-hover-content-box :last-child {
         border-bottom: 0px; }
       .standard-table .table-hover-content-parent .show-table-div-on-hover .table-hover-content-box .img-box {
@@ -11052,9 +11054,10 @@ table .bold-heading {
     background: #F6F6F6;
     border: 1px solid #c4c4c4;
     text-align: left;
-    max-height: 297px;
-    overflow-y: scroll;
     z-index: 1; }
+  .standard-table .table-hover-content-parent:hover .data-row-contenter {
+    max-height: 297px;
+    overflow-y: scroll; }
 .standard-table tbody {
   background: white; }
 .standard-table table thead {
